@@ -1,78 +1,43 @@
 package com.lhf.game.item.concrete.equipment;
 
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.Set;
 
+import com.lhf.game.EffectPersistence;
+import com.lhf.game.EffectPersistence.TickType;
 import com.lhf.game.battle.Attack;
+import com.lhf.game.creature.Creature;
+import com.lhf.game.creature.CreatureEffectSource;
 import com.lhf.game.dice.DamageDice;
 import com.lhf.game.dice.DieType;
 import com.lhf.game.enums.DamageFlavor;
 import com.lhf.game.enums.EquipmentSlots;
 import com.lhf.game.enums.EquipmentTypes;
-import com.lhf.game.item.interfaces.Weapon;
+import com.lhf.game.enums.Stats;
+import com.lhf.game.item.Weapon;
 import com.lhf.game.item.interfaces.WeaponSubtype;
 
 public class ReaperScythe extends Weapon {
 
-    private List<EquipmentSlots> slots;
-    private List<EquipmentTypes> types;
-    private List<DamageDice> damages;
-    private Map<String, Integer> equippingChanges;
-
     public ReaperScythe(boolean isVisible) {
-        super("Reaper Scythe", isVisible);
+        super("Reaper Scythe", isVisible, Set.of(
+                new CreatureEffectSource("Scythe", new EffectPersistence(TickType.INSTANT), "Scythes reap things.",
+                        false)
+                        .addDamage(new DamageDice(1, DieType.EIGHT, DamageFlavor.NECROTIC))),
+                DamageFlavor.NECROTIC, WeaponSubtype.FINESSE);
 
-        slots = Arrays.asList(EquipmentSlots.WEAPON);
-        types = Arrays.asList(EquipmentTypes.SIMPLEMELEEWEAPONS, EquipmentTypes.LONGSWORD);
-        damages = Arrays.asList(new DamageDice(1, DieType.EIGHT, this.getMainFlavor()));
-        equippingChanges = new HashMap<>(0); // changes nothing
+        this.slots = List.of(EquipmentSlots.WEAPON);
+        this.types = List.of(EquipmentTypes.SIMPLEMELEEWEAPONS, EquipmentTypes.LONGSWORD);
+        this.descriptionString = "This is a nice, long, shiny scythe.  It's super powerful...\n";
     }
 
     @Override
-    public List<EquipmentTypes> getTypes() {
-        return types;
-    }
+    public Attack generateAttack(Creature attacker) {
+        Set<CreatureEffectSource> extraSources = Set
+                .of(new CreatureEffectSource("Necrotic Damage", new EffectPersistence(TickType.INSTANT),
+                        "This weapon does extra necrotic damage.", false).addStatChange(Stats.CURRENTHP, -100));
 
-    @Override
-    public List<EquipmentSlots> getWhichSlots() {
-        return slots;
-    }
-
-    @Override
-    public Map<String, Integer> getEquippingChanges() {
-        return this.equippingChanges;
-    }
-
-    @Override
-    public String printDescription() {
-        StringBuilder sb = new StringBuilder();
-        sb.append("This is a nice, long, shiny scythe.  It's super powerful...\n");
-        sb.append(this.printStats());
-        return sb.toString();
-    }
-
-    @Override
-    public DamageFlavor getMainFlavor() {
-        return DamageFlavor.NECROTIC;
-    }
-
-    @Override
-    public List<DamageDice> getDamages() {
-        return this.damages;
-    }
-
-    @Override
-    public Attack modifyAttack(Attack attack) {
-        attack = super.modifyAttack(attack).addToHitBonus(10);
-        attack.addDamageBonus(100);
-        return attack;
-    }
-
-    @Override
-    public WeaponSubtype getSubType() {
-        return WeaponSubtype.FINESSE;
+        return super.generateAttack(attacker, extraSources).addToHitBonus(10);
     }
 
 }
